--- a/development/terminalfour/src/sass/ContentTypes/_stylestoimport.scss
+++ b/development/terminalfour/src/sass/ContentTypes/_stylestoimport.scss
@@ -1,12 +1,12 @@
 body {
-  // background: #E9EDF1;
-  margin-top: 68px;
+  background: #fff;
+  // margin-top: 68px;
   font-family: 'Gotham A', 'Gotham B', Open Sans, helvetica, arial, sans-serif;
   font-style: normal;
   font-weight: 400;
   font-size: 1rem;
   color: #1e1e1e;
-  // line-height: 1.6em;
+  line-height: 1.6em;
   -webkit-font-smoothing: subpixel-antialiased!important;
   -ms-backface-visibility: hidden;
 
