--- a/www-root/includes/header.html
+++ b/www-root/includes/header.html
@@ -235,6 +235,11 @@ $('#nav-search-close').click(function(){
 });
 </script>
 
+/* allow mobile menu dropdown to scroll */
+<script>
+$('#content-nav').css('max-height',$(window).height());
+</script>
+
 <script>
 // scrollTop function
 $(window).scroll(function(){
