Revert "adds arial-label on navigation"
This reverts commit 2791b21fad23f1ffa1af9f869bad920c8affc26c.

--- a/www-root/style-assets/css/inner-style.css
+++ b/www-root/style-assets/css/inner-style.css
@@ -7902,6 +7902,7 @@ col-xs-12, .faculty-staff-students {
 .nav > li > a:hover, .nav > li > a:focus {
   background-color: transparent;
   color: #001e36;
+  font-weight: 800;
 }
 
 .container .pushdown-menu {
