--- a/development/terminalfour/src/sass/msu-partials/_global-header.scss
+++ b/development/terminalfour/src/sass/msu-partials/_global-header.scss
@@ -498,7 +498,7 @@ col-xs-12, .faculty-staff-students {
 .nav > li > a:hover, .nav > li > a:focus {
     background-color: transparent;
     color: #001e36;
-    // font-weight: 800;
+    font-weight: 800;
 }
 
 .container .pushdown-menu {
