adds aria to about, search is working

--- a/development/terminalfour/src/html/includes/header.html
+++ b/development/terminalfour/src/html/includes/header.html
@@ -30,8 +30,8 @@
               </ul>
             </div>
             <ul class="nav navbar-nav navbar-center dropdown" id="nav-middle">
-              <li id="nav-faculty">
-                <a class="mobile-header mobile-about">About<span class="fa fa-chevron-down pull-right"></span></a>
+              <li id="nav-faculty" role="button" aria-haspopup="true" aria-label="About Menu">
+                <a href="#" class="mobile-header mobile-about">About<span class="fa fa-chevron-down pull-right"></span></a>
                 <ul class="pushdown-menu pushdown-about">
                   <li><a href="/about">About</a></li>
                   <li><a href="/about/strategicplan2020">Strategic Plan 2020</a></li>
