--- a/www-root/includes/header.html
+++ b/www-root/includes/header.html
@@ -42,8 +42,8 @@
                   <li><a href="/commencement">Graduation / Commencement</a></li>
                  </ul>
                </li>
-               <li id="nav-admissions">
-                 <a class="mobile-header mobile-ps"><span class="fa fa-chevron-down pull-right"></span>Prospective Students</a>
+               <li id="nav-admissions"  role="button" aria-haspopup="true" aria-label="Admissions Menu">
+                 <a href="#" class="mobile-header mobile-ps"><span class="fa fa-chevron-down pull-right"></span>Prospective Students</a>
                  <ul class="pushdown-menu pushdown-ps">
                    <li><a href="/admissions">Prospective Students</a></li>
                    <li><a href="/admissions/apply/first-timeundergraduate/">First-Time Undergraduate</a></li>
@@ -59,8 +59,8 @@
                    <li><a href="/cost">Cost</a></li>
                  </ul>
                </li>
-               <li id="nav-academics">
-                 <a class="mobile-header mobile-academics"><span class="fa fa-chevron-down pull-right"></span>Academics</a>
+               <li id="nav-academics" role="button" aria-haspopup="true" aria-label="Academics Menu">
+                 <a href="#" class="mobile-header mobile-academics"><span class="fa fa-chevron-down pull-right"></span>Academics</a>
                  <ul class="pushdown-menu pushdown-academics">
                    <li><a href="/programs/">Academic Programs</a></li>
                    <li><a href="/las/">College of Letters, Arts and Sciences</a></li>
@@ -75,8 +75,8 @@
                    <li><a href="/studentengagementandwellness">Student Engagement &amp; Wellness</a></li>
                  </ul>
                </li>
-               <li id="nav-alumni">
-                 <a class="mobile-header mobile-alumni"><span class="fa fa-chevron-down pull-right"></span>Alumni &amp; Friends</a>
+               <li id="nav-alumni" role="button" aria-haspopup="true" aria-label="Alumni Menu">
+                 <a href="#" class="mobile-header mobile-alumni"><span class="fa fa-chevron-down pull-right"></span>Alumni &amp; Friends</a>
                  <ul class="pushdown-menu pushdown-alumni menu-last">
                    <li><a href="/alumni/">Alumni &amp; Friends</a></li>
                    <li><a href="/alumni/careerservices/">Career Services</a></li>
@@ -87,7 +87,7 @@
                    <li><a href="/alumni/events">Alumni Events</a></li>
                  </ul>
                </li>
-               <li id="nav-athletics">
+               <li id="nav-athletics" role="button" aria-haspopup="true" aria-label="Athletics Link">
                  <a href="http://roadrunnersathletics.com" class="mobile-alumni athletics-header">Athletics</a>
                </li>
                <li id="nav-search"><span class="fa fa-search search-desktop"></span></li>
