--- a/www-root/style-assets/css/style.css
+++ b/www-root/style-assets/css/style.css
@@ -7412,10 +7412,6 @@ header {
 
 /**  Homepage Feature Components michael.mason@terminalfour.com **/
 /* MainHeaderNavigation Styles */
-.blue-header {
-  background: #000;
-}
-
 .navbar .navbar-collapse {
   text-align: center;
 }
@@ -7428,31 +7424,7 @@ header {
 }
 
 .msudenver_logo_change {
-  height: 102px;
-}
-
-.toolbar {
-  z-index: 9999;
-}
-.toolbar button.navbar-toggle {
-  color: #fff;
-  font-size: 25px;
-  background-color: #003a6e;
-  border-radius: 0px;
-}
-.toolbar ul li {
-  font-family: "Gotham A", "Gotham B", "Helvetica Neue", Helvetica, Arial, sans-serif;
-  color: #00447c;
-  padding-right: .25em;
-  padding-left: .25em;
-  -webkit-transition: all 0.25s ease-in-out;
-  -moz-transition: all 0.25s ease-in-out;
-  -o-transition: all 0.25s ease-in-out;
-  transition: all 0.25s ease-in-out;
-  list-style: none;
-}
-.toolbar ul li:hover {
-  color: #333;
+  height: 70px;
 }
 
 .fac-staf-stu-mobile {
@@ -7474,6 +7446,28 @@ header {
   min-height: 46px;
   border-radius: 0 !important;
   margin-bottom: 0;
+  background: #000;
+  z-index: 9999;
+}
+.navbar button.navbar-toggle {
+  color: #fff;
+  font-size: 25px;
+  background-color: #003a6e;
+  border-radius: 0px;
+}
+.navbar ul li {
+  font-family: "Gotham A", "Gotham B", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  color: #00447c;
+  padding-right: .25em;
+  padding-left: .25em;
+  -webkit-transition: all 0.25s ease-in-out;
+  -moz-transition: all 0.25s ease-in-out;
+  -o-transition: all 0.25s ease-in-out;
+  transition: all 0.25s ease-in-out;
+  list-style: none;
+}
+.navbar ul li:hover {
+  color: #333;
 }
 
 .navbar-collapse {
@@ -7670,14 +7664,14 @@ header {
   border-radius: 0 0 10px 10px;
   text-align: center;
   padding: 0.3em 0.3em;
-  width: 7%;
+  width: 8%;
   font-family: "Gotham A", "Gotham B", "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-style: normal;
   font-weight: 700;
   letter-spacing: 2px;
   float: right !important;
   margin-left: 0.15em;
-  margin-right: 1em;
+  margin-right: .5em;
   -webkit-transition: background .25s ease;
   -moz-transition: background .25s ease;
   -o-transition: background .25s ease;
@@ -7742,7 +7736,8 @@ header {
 }
 
 .msudenver_logo {
-  padding: 15px 15px 0px 15px;
+  margin-top: 15px;
+  margin-right: 15px;
   max-height: 56px;
 }
 
@@ -8000,10 +7995,6 @@ col-xs-12, .faculty-staff-students {
     padding-bottom: 2px;
   }
 
-  .blue-header {
-    border-bottom: 5px solid #005fae;
-  }
-
   .navbar-collapse {
     border-top: 1px solid transparent;
     box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.1);
@@ -8074,13 +8065,12 @@ col-xs-12, .faculty-staff-students {
 
   .msudenver_logo {
     max-height: 104px;
-    padding-bottom: 15px;
+    margin-bottom: 15px;
   }
 
   .navbar .navbar-nav {
     display: inline-block;
     float: none;
-    margin-bottom: -2px;
   }
 
   .navbar .navbar-collapse {
@@ -8136,10 +8126,6 @@ col-xs-12, .faculty-staff-students {
     left: 14em;
   }
 
-  .blue-header {
-    height: 10em;
-  }
-
   #content-nav {
     background: linear-gradient(to bottom, #fff 0px, #fff 60px, #ddd 60px);
   }
@@ -8154,10 +8140,6 @@ col-xs-12, .faculty-staff-students {
 
   .faculty-staff-students a {
     display: inline-block;
-  }
-
-  #nav-search {
-    width: 1em;
   }
 
   .navbar-toggle {
@@ -8207,6 +8189,10 @@ col-xs-12, .faculty-staff-students {
   #content-nav #nav-search-close {
     top: -3.2em;
     left: 17.8em;
+  }
+
+  #nav-search {
+    width: 1em;
   }
 
   #nav-faculty {
@@ -8304,11 +8290,6 @@ col-xs-12, .faculty-staff-students {
 
   .apply-button {
     font-size: 1.2em;
-    padding: 0.3em 0.3em;
-    width: 8%;
-    font-weight: 600;
-    margin-left: 0.15em;
-    margin-right: 0em;
   }
 
   .pushdown-menu {
