--- a/development/terminalfour/src/sass/msu-partials/_global-header.scss
+++ b/development/terminalfour/src/sass/msu-partials/_global-header.scss
@@ -330,7 +330,8 @@
 .msudenver_logo {
   margin-top: 15px;
   margin-right:15px;
-  max-height:56px;
+  margin-left:15px;
+  max-height:46px;
 }
 
 #search-input #search-text {
