--- a/www-root/style-assets/css/inner-style.css
+++ b/www-root/style-assets/css/inner-style.css
@@ -7738,7 +7738,8 @@ header {
 .msudenver_logo {
   margin-top: 15px;
   margin-right: 15px;
-  max-height: 56px;
+  margin-left: 15px;
+  max-height: 46px;
 }
 
 #search-input #search-text {
