updates the card class to card-program

--- a/www-root/style-assets/css/inner-style.css
+++ b/www-root/style-assets/css/inner-style.css
@@ -9770,7 +9770,7 @@ section.filter-titles {
   margin-bottom: 10px;
 }
 
-.card {
+.card-program {
   margin-bottom: 15px;
   height: 125px;
   overflow: hidden;
