--- a/development/terminalfour/src/sass/ContentTypes/_programs.scss
+++ b/development/terminalfour/src/sass/ContentTypes/_programs.scss
@@ -13,7 +13,7 @@ section.filter-titles {
     margin-bottom: 10px;
 }
 
-.card {
+.card-program {
     margin-bottom: 15px;
     height: 125px;
     overflow:hidden;
