add homepage link to the logo and hides search nav button on mobile

--- a/development/terminalfour/src/html/includes/header.html
+++ b/development/terminalfour/src/html/includes/header.html
@@ -7,7 +7,7 @@
         </button>
             <div class="row">
               <div class="col-xs-8">
-                <img class="msudenver_logo" src="https://msudenver.edu/media/newsiteassets/images/msudenver_logo_header.svg" alt="MSU Denver Logo">
+                <a href="/"> <img class="msudenver_logo" src="https://msudenver.edu/media/newsiteassets/images/msudenver_logo_header.svg" alt="MSU Denver Logo"> </a>
               </div>
               <a href="/admissions"><div class="col-xs-1 apply-button">APPLY</div></a>
               <a href="/giving"><div class="col-xs-1 apply-button give-visit-buttons">GIVE</div></a>
@@ -90,7 +90,7 @@
                <li id="nav-athletics" role="button" aria-haspopup="true" aria-label="Athletics Link">
                  <a href="http://roadrunnersathletics.com" class="mobile-alumni athletics-header">Athletics</a>
                </li>
-               <li id="nav-search" aria-haspopup="true" aria-label="Search toolbar"><a href="#"><span class="fa fa-search search-desktop"></span></a></li>
+               <li id="nav-search" aria-haspopup="true" aria-label="Search toolbar" class="hidden-xs hidden-sm"><a href="#"><span class="fa fa-search search-desktop"></span></a></li>
         <!-- Hidden Search Bar-->
               <form action="https://www.msudenver.edu/search">
                 <div id="search-input" class="inner-addon left-addon search-input-desktop" role="search" action="https://www.msudenver.edu/search">
