fix mobile header height

--- a/development/terminalfour/src/sass/msu-partials/_global-header.scss
+++ b/development/terminalfour/src/sass/msu-partials/_global-header.scss
@@ -568,6 +568,9 @@ col-xs-12, .faculty-staff-students {
   .left-addon input {
     padding-left: 4em;
   }
+  .header-container {
+    line-height: 2.4em;
+  }
 }
 
 
