--- a/www-root/style-assets/css/style.css
+++ b/www-root/style-assets/css/style.css
@@ -7954,6 +7954,10 @@ col-xs-12, .faculty-staff-students {
   .left-addon input {
     padding-left: 4em;
   }
+
+  .header-container {
+    line-height: 2.4em;
+  }
 }
 @media screen and (max-width: 991px) {
   body {
