--- a/development/terminalfour/src/html/includes/header.html
+++ b/development/terminalfour/src/html/includes/header.html
@@ -90,6 +90,17 @@
                <li id="nav-athletics" role="button" aria-haspopup="true" aria-label="Athletics Link">
                  <a href="http://roadrunnersathletics.com" class="mobile-alumni athletics-header">Athletics</a>
                </li>
+               <li class="sr-only">
+                 <form class="navbar-form" role="search" action="https://www.msudenver.edu/search">
+                   <div class="input-group">
+                     <label for="search-msu-denver" class="sr-only">Search MSU Denver site</label>
+                     <input id="search-msu-denver" type="text" class="form-control" placeholder="Search" name="q">
+                     <div class="input-group-btn">
+                       <button class="btn btn-default" type="submit"></button>
+                     </div>
+                   </div>
+                 </form>
+               </li>
                <li id="nav-search" aria-haspopup="true" aria-label="Search toolbar" class="hidden-xs hidden-sm"><a href="#"><span class="fa fa-search search-desktop"></span></a></li>
         <!-- Hidden Search Bar-->
               <form action="https://www.msudenver.edu/search">
