--- a/www-root/includes/header.html
+++ b/www-root/includes/header.html
@@ -246,7 +246,7 @@ $('#nav-search-close').click(function(){
 });
 </script>
 
-/* allow mobile menu dropdown to scroll */
+<!-- allow mobile menu dropdown to scroll -->
 <script>
 $('#content-nav').css('max-height',$(window).height());
 </script>
