--- a/development/terminalfour/src/sass/ContentTypes/_SiteHeader.scss
+++ b/development/terminalfour/src/sass/ContentTypes/_SiteHeader.scss
@@ -27,12 +27,12 @@ ul.breadcrumb {
 ul.breadcrumb a {
   color: #fff
 }
+}
 
-@media (max-width: 767px) {
+@media (max-width: $screen-md-min) {
   .siteheader {
     // margin-top: 15px;
     text-align: right;
     padding-right: 10px;
   }
-}
 }
