updates labels on logo, logo background, and Prospective students nav

--- a/development/terminalfour/src/html/includes/header.html
+++ b/development/terminalfour/src/html/includes/header.html
@@ -1,13 +1,13 @@
   <!-- Global Header -->
     <div class="navbar navbar-fixed-top" >
-      <div class="header-container" style="background-image:url(https://msudenver.edu/media/newsiteassets/images/header_asphalt.png); background-size: 100%;">
+      <div class="header-container" style="background-image:url(https://msudenver.edu/media/newsiteassets/images/header_asphalt.png); background-size: 100%;" alt="Asphalt Image">
         <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
           <span class="sr-only">Toggle quick links navigation</span>
           <span class="fa fa-bars"></span>
         </button>
             <div class="row">
               <div class="col-xs-8">
-                <a href="/"> <img class="msudenver_logo" src="https://msudenver.edu/media/newsiteassets/images/msudenver_logo_header.svg" alt="MSU Denver Logo"> </a>
+                <a href="/"> <img class="msudenver_logo" src="https://msudenver.edu/media/newsiteassets/images/msudenver_logo_header.svg" alt="MSU Denver Homepage"> </a>
               </div>
               <a href="/admissions"><div class="col-xs-1 apply-button">APPLY</div></a>
               <a href="/giving"><div class="col-xs-1 apply-button give-visit-buttons">GIVE</div></a>
@@ -42,7 +42,7 @@
                   <li><a href="/commencement">Graduation / Commencement</a></li>
                  </ul>
                </li>
-               <li id="nav-admissions"  role="button" aria-haspopup="true" aria-label="Admissions Menu">
+               <li id="nav-admissions"  role="button" aria-haspopup="true" aria-label="Prospective Students Menu">
                  <a href="#" class="mobile-header mobile-ps"><span class="fa fa-chevron-down pull-right"></span>Prospective Students</a>
                  <ul class="pushdown-menu pushdown-ps">
                    <li><a href="/admissions">Prospective Students</a></li>
