expands alumni nav width to 12em on 992px

--- a/www-root/style-assets/css/inner-style.css
+++ b/www-root/style-assets/css/inner-style.css
@@ -1,5 +1,5 @@
 @charset "UTF-8";
-/**
+/** UPDATED
     ===========================================
             Start Bootstrap  v 3.3.7
     ===========================================
@@ -8189,7 +8189,7 @@ col-xs-12, .faculty-staff-students {
   }
 
   #nav-alumni {
-    width: 10em;
+    width: 12em;
   }
 
   #content-nav #search-input input[type="text"] {
