give focus to search field when magnifying glass clicked

--- a/www-root/style-assets/css/inner-style.css
+++ b/www-root/style-assets/css/inner-style.css
@@ -1,5 +1,5 @@
 @charset "UTF-8";
-/** UPDATED
+/**
     ===========================================
             Start Bootstrap  v 3.3.7
     ===========================================
