--- a/www-root/style-assets/css/style.css
+++ b/www-root/style-assets/css/style.css
@@ -1,5 +1,5 @@
 @charset "UTF-8";
-/** MIguel
+/**
     ===========================================
             Start Bootstrap  v 3.3.7
     ===========================================
